Fix: Spacing between TOC title and pages

--- a/styles/content-spacing.css
+++ b/styles/content-spacing.css
@@ -64,7 +64,7 @@ article li p img {
     margin-top: 16px !important;
 }
 
-h3+p img {
+article h3+p img {
     margin-top: 16px !important;
 }
 
@@ -178,4 +178,8 @@ article h2+p img {
 article ul+p>img,
 article ol+p>img {
     margin-left: 8px !important;
+}
+
+.menu-title {
+    margin-bottom: 8px !important;
 }
